# tui-li

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  nginx.conf
.github/workflows/: ci.yalm  deploy-container.yml  deploy-image.yml  deploy.yml  docker.yml  pr.yml  terraform.yml  test.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/middleware/: rate_limiter.rs
api/src/models/: app_config.rs  app_settings.rs  mod.rs  short_url_response.rs
api/src/routes/: health.rs  mod.rs  redirect.rs  shorten.rs
api/src/services/: mod.rs  shortener_service.rs
api/src/stores/: db.rs
api/tests/: helpers.rs  rate_limiter_test.rs  redirect_test.rs  shorten_test.rs
infra/: main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
src/: lib.rs  main.rs
src/middleware/: rate_limiter.rs
src/models/: mod.rs  url.rs  url_item.rs
src/routes/: mod.rs  redirect.rs  shorten.rs
src/services/: mod.rs  shortener.rs
src/stores/: db.rs  mod.rs  url_store.rs
tests/: health_test.rs  helpers.rs  rate_limiter_test.rs  redirect_test.rs  shorten_test.rs
ui/: .eslintrc.json  README.md  eslint.config.js  index.html  jest.config.ts  package.json  tsconfig.json
ui/src/: App.test.tsx  App.tsx  main.tsx
ui/src/components/: Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  Layout.test.tsx  Layout.tsx  Shortener.module.css  Shortener.test.tsx  Shortener.tsx  quoteQuery.ts  useShortenMutation.ts
