[package]
name = "tui-li"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
normalize-url-rs = "0.2"
url = "2.5.7"
chrono = "0.4.41"
anyhow = "1.0.99"
aws-config = "1.8.5"
aws-sdk-dynamodb = "1.92.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
sha2 = "0.10.9"
hex = "0.4.3"
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres", "dynamodb"] }
rstest = "0.26.1"
uuid = "1.18.0"
actix-http = "3.11.0"
async-trait = "0.1.89"
test-context = "0.4.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"   # or "s"
