[package]
name = "tui-li"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
normalize-url-rs = "0.2"
url = "2.5"
chrono = "0.4"
anyhow = "1"
aws-config = "1.8"
aws-sdk-dynamodb = "1.93"
serde_dynamo = { version = "4.3", features = ["aws-sdk-dynamodb+1"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
actix-http = "3.11"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", default-features = false, features = ["dynamodb"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"   # or "s"
